config/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netguard-apiserver
  namespace: default
  labels:
    app: netguard-apiserver
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: netguard-apiserver
